# Identity-Forge

./: App.tsx  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/thomasmartin/IdentityForge/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/IdentityForge/: Info.plist
ios/IdentityForge.xcodeproj/: project.pbxproj
ios/IdentityForge.xcodeproj/xcshareddata/xcschemes/: IdentityForge.xcscheme
ios/IdentityForge.xcworkspace/: contents.xcworkspacedata
modules/iota-identity/: expo-module.config.json  index.ts
modules/iota-identity/android/: build.gradle
modules/iota-identity/android/src/main/java/expo/modules/iotaidenitity/: IotaIdenitityModule.kt  IotaIdenitityView.kt
modules/iota-identity/ios/: IotaIdentity.podspec  IotaIdentityModule.swift  IotaIdentityView.swift
modules/iota-identity/src/: IotaIdentity.types.ts  IotaIdentityModule.ts  IotaIdentityView.tsx  IotaIdentityView.web.tsx
rust_identity_lib/: Cargo.toml  rust_identity_lib.h
rust_identity_lib/src/: lib.rs
scripts/: cargo-ios.ts
