[package]
name = "rust_identity_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
anyhow = "1.0.62"
primitive-types = "0.12.1"
rand = "0.8.5"

identity_iota = { version = "1.2.0", default-features = false, features = ["iota-client", "client", "memstore", "domain-linkage", "revocation-bitmap", "status-list-2021"]  }
iota-sdk = { version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }

serde_json = { version = "1.0"}
tokio = { version = "1.29" }

[lib]
crate-type = ["staticlib", "cdylib"]